[package]
name = "clinput"
version = "0.1.1"
authors = ["Dan Stewart <git@mail.danstewart.dev>"]
edition = "2018"
description = "A basic command line prompt module"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
